changed database  for production

--- a/app/views/signups/new.html.erb
+++ b/app/views/signups/new.html.erb
@@ -3,7 +3,7 @@
 
     <div class="main">
       <div class="container">
-        <img src="http://s3.amazonaws.com/codecademy-content/projects/innovation-cloud/cloud.svg" height="128" width="196">
+        <img src="https://www.nhaschools.com/schools/pathway/Style%20Library/NHASchools/images/nha-book-blue.png" height="128" width="196">
         <h2>Zenith East Connection</h2>
         <p>Connect with your teachers from the comfort of your house and don't miss any resource.</p>
         <p>Do your homework online submit them and watch the teachers correct them and give you a feebaack.</p>
@@ -14,8 +14,8 @@
 
     <div class="jumbotron">
       <div class="container">
-        <h2>Stay Connected</h2>
-        <p>Receive weekly insights from industry insiders.</p>
+        <h2>Be part of your children education</h2>
+        <p>Receive monthly update on school activitie by signing with your email.</p>
         
         
         <!-- Your code here -->
